# launch_ext

./: .codespell-ignore-words.txt  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  pixi.toml  pyproject.toml  setup.py
.devcontainer/jazzy/: devcontainer.json
.devcontainer/kilted/: devcontainer.json
.devcontainer/lyrical/: devcontainer.json
.github/workflows/: ci.yml  release.yml
launch_ext/: __init__.py
launch_ext/actions/: __init__.py  configure_avahi.py  configure_fastdds.py  configure_fastdds_easy.py  configure_zenoh.py  execute_local.py  execute_process.py  git_repo_info.py  include_package_launch_file.py  log_rotate.py  make_device_node.py  set_launch_configuration_if_not_none.py  write_file.py
launch_ext/conditions/: __init__.py  enum_condition.py  enum_equal.py
launch_ext/config/: fastdds_profile.xml.j2  fastdds_profile.xml.xacro  zenoh_router_config.json  zenoh_session_config.json
launch_ext/discovery/: __init__.py  avahi_manager.py  configure_middleware.py  discovery_config.py
launch_ext/entrypoints/: __init__.py  launch_with_restart_trigger.py
launch_ext/substitutions/: __init__.py  fastdds_client_environment.py  fastdds_env_var.py  fastdds_superclient_environment.py  file_contents.py  resolve_host.py  ros_log_level.py  superclient_environment.py  templated.py  unary.py  write_temp_file.py  xacro.py  yaml_to_file.py  yaml_to_json.py
test/launch_ext/: test_enum_equal.py  test_file_contents.py  test_include_package_launch_file.py  test_log_rotate.py  test_templated.py  (+3 more)
