[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "launch_ext"
version = "0.0.1"
description = "Some extras for launch tooling."
license = { text = "MIT" }
authors = [{ name = "Russ Webber", email = "russ.webber@greenroomrobotics.com" }]
requires-python = ">=3.10"

[project.entry-points."launch.frontend.launch_extension"]
launch_ext = "launch_ext"

[tool.hatch.build.targets.wheel]
packages = ["launch_ext"]

[tool.hatch.build.targets.wheel.shared-data]
"resource/launch_ext" = "share/ament_index/resource_index/packages/launch_ext"
"launch_ext/config" = "share/launch_ext/config"
